# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ruff.yml
page_analyzer/: app.py  db.py  parser.py  validator.py
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
