[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn",
    "psycopg2-binary",
    "python-dotenv",
    "validators",
    "requests",
    "beautifulsoup4",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
